--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>URL</title>
 </head>
 <body>
-  <p>e986-178-178-89-41.ngrok.io/</p>
+  <p>e986-178-178-89-41.ngrok.io</p>
 </body>
 </html>
